--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Analytics/adminanalytics.css
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Analytics/adminanalytics.css
@@ -13,13 +13,13 @@
     -fx-stroke-width: 0.2;
 }
 
-.message-text {
+.message-label {
     -fx-text-fill: #757575;
     -fx-font-size: 12px;
     -fx-font-family: "Arial", sans-serif;
 }
 
-.header-label {
+.hello-label {
     -fx-text-fill: black;
     -fx-font-size: 18px;
     -fx-font-weight: bold;
@@ -34,19 +34,21 @@
     -fx-font-family: "Arial", sans-serif;
 }
 
-.button {
+.side-bar-button {
     -fx-background-color: white;
     -fx-text-fill: #4a4a4a;
     -fx-font-size: 14px;
     -fx-cursor: hand;
 }
 
-.button:hover {
+.side-bar-button:hover {
     -fx-background-color: #4A85F6;
     -fx-text-fill: white;
+    -fx-font-size: 14px;
 }
 
 .analytics-button {
+    -fx-background-color: white;
     -fx-text-fill: #4A85F6;
 }
 .logout-button {
