--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Users/adminusers.css
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Users/adminusers.css
@@ -13,13 +13,13 @@
     -fx-stroke-width: 0.2;
 }
 
-.message-text {
+.message-label {
     -fx-text-fill: #757575;
     -fx-font-size: 12px;
     -fx-font-family: "Arial", sans-serif;
 }
 
-.header-label {
+.hello-label {
     -fx-text-fill: black;
     -fx-font-size: 18px;
     -fx-font-weight: bold;
@@ -34,32 +34,66 @@
     -fx-font-family: "Arial", sans-serif;
 }
 
-.button {
+.side-bar-button {
     -fx-background-color: white;
     -fx-text-fill: #4a4a4a;
     -fx-font-size: 14px;
     -fx-cursor: hand;
 }
 
-.button:hover {
+.side-bar-button:hover {
     -fx-background-color: #4A85F6;
     -fx-text-fill: white;
+    -fx-font-size: 14px;
 }
 
 .user-button {
     -fx-text-fill: #4A85F6;
+    -fx-background-color: white;
+}
+.logout-button {
+    -fx-background-color: white;
+    -fx-text-fill: #4a4a4a;
+    -fx-font-size: 17px;
+    -fx-cursor: hand;
+}
+
+.logout-button:hover {
+    -fx-background-color: #4A85F6;
+    -fx-text-fill: white;
+}
+
+/* ButtonBar styling */
+.button-bar {
+    -fx-background-color: white;
+    -fx-spacing: 20px;
 }
 
 .edit-button {
-    -fx-background-color: #A4CC72;
+    -fx-background-color: #96bd67;
     -fx-text-fill: white;
+    -fx-font-size: 15px;
+    -fx-cursor: hand;
     -fx-background-radius: 5;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 10, 0, 0, 2);
+}
+
+.edit-button:hover {
+    -fx-background-color: #809f57;
 }
 
 .remove-button {
-    -fx-background-color: #F64A4A;
+    -fx-background-color: #dc4242;
     -fx-text-fill: white;
+    -fx-font-size: 15px;
+    -fx-cursor: hand;
     -fx-background-radius: 5;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 10, 0, 0, 2);
+}
+
+
+.remove-button:hover {
+    -fx-background-color: #ba3838;
 }
 
 .submit-button{
@@ -79,17 +113,7 @@
     -fx-text-fill: white;
     -fx-background-radius: 5;
 }
-.logout-button {
-    -fx-background-color: white;
-    -fx-text-fill: #4a4a4a;
-    -fx-font-size: 17px;
-    -fx-cursor: hand;
-}
 
-.logout-button:hover {
-    -fx-background-color: #4A85F6;
-    -fx-text-fill: white;
-}
 
 /* TopBar styling */
 .top-container {
@@ -122,7 +146,7 @@
 /* ListPane styling */
 .list-pane {
     -fx-background-color: white;
-    -fx-border-color: white;
+    -fx-border-color: #white;
     -fx-background-radius: 10;
     -fx-border-radius: 10px;
 }
@@ -136,4 +160,16 @@
     -fx-text-fill: #8f9bb3;
     -fx-font-size: 15px;
     -fx-font-family: "Arial", sans-serif;
+}
+
+/* Title styling */
+.container-label {
+    -fx-text-fill: #222b45;
+    -fx-font-size: 17px;
+    -fx-font-family: "Arial", sans-serif;
+}
+
+.line {
+    -fx-border-color: #4A85F6;
+    -fx-border-width: 1;
 }
